--- a/style.css
+++ b/style.css
@@ -2,10 +2,10 @@
 Theme Name: zero
 Theme URI: https://github.com/urexrex/zero
 Github Theme URI: https://github.com/urexrex/zero
-Description: A very basic theme for experimentation and learning
+Description: A very basic theme for experimentation and learning LO
 Author: Dan York
 Author URI: https://github.com/urexrex/zero
-Version: v1.1.0
+Version: v4.1.0
 License:  GPL
 
 A very barebones theme purely for me to learn about WordPress Themes
